--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <!-- Font awesome 5 -->
+  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif;">
   <app-root></app-root>
